--- a/MUTransport/docs/changelog.txt
+++ b/MUTransport/docs/changelog.txt
@@ -1,1 +1,29 @@
- 
+CHANGELOG
+=========
+
+1.3.1
+
+MUTransport now provide:
+
+News (3.0.0) as startmodule and targetmodule
+Pages (2.6.0) as startmodule
+PagEd ( 1.0 ) as startmodule
+Reviews (2.4.1) as startmodule – not published yet
+Content (4.0.0) as start- and targetmodule 
+
+Wordpress
+
+Important modifications:
+
+Functions to work with Pages 2.6.0 was changed to use doctrine.
+
+For wordpress import now you can enter all relevant datas in the settings.
+
+New functions:
+
+2 new blocks - random html block and combined News(Module News) and Comments(Module EZComments)
+
+Installation:
+
+There is no upgrade routine.
+You have to deinstall an old version and reinstall.
