--- a/MUTransport/docs/changelog.txt
+++ b/MUTransport/docs/changelog.txt
@@ -1,6 +1,10 @@
 CHANGELOG
 =========
 
+1.3.2
+
+fixed #18 the javascript for view of the additional option for reviews now works as expected
+
 1.3.1
 
 MUTransport now provide:
